A few things need to be fixed here, all relating to the content that ajax brings up for viewing customer info. The test.js is obviously meant to be deleted later and replaced by ajaxViewCustomer. I need to work on test.js to format the css of my table correctly which i actually think might be done. The only thing left i want to do is figure out how to add a scrollable div with the customer content inside so that when I have a big DB of customers, it doesn't overflow off of the main web page. Gonna need to do some research. Also the div needs to be a fixed size but i think that is assumed with a scrollable div. After that is all figured out, I'm ready to move on from this project.

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -81,7 +81,8 @@ body{
     font-family: headerFont;
     font-size: 30px;
 }
-#form li{
+
+#form li, #viewCustomer li{
     list-style-type: none;
 }
 #form input[type=text], #form input[type=password], #form input[type=email], #form select{
@@ -91,7 +92,7 @@ body{
     background: #fefae0;
     font-size: 15px;
     font-family: headerFont;
-  }
+}
 #form select{
     margin-bottom: 10px;
 }
@@ -112,4 +113,19 @@ body{
     background-color: #fefae0;
     color: #dda15e;
     border: 3px solid #dda15e;
+}
+#viewCustomer{
+    display: none;
+    flex-direction: column; /* Stack items vertically */
+    align-items: center; /* Center items horizontally within the container */
+    text-align: left;
+    padding: 20px;
+}
+
+#viewCustomer table{
+    background-color: white;
+    border-spacing: 5px;
+}
+#viewCustomer table tr, #viewCustomer table td, #viewCustomer table th{
+    padding: 10px;
 }
